--- a/Mobile layout/index.html
+++ b/Mobile layout/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FlexBox Nav</title>
+  <title>FlexBox Modile Layout</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
